--- a/templates/add_question.html
+++ b/templates/add_question.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Welcome to AskMate</title>
+    <title>Ask a question | AskMate</title>
 </head>
 <body>
 
