--- a/templates/list.html
+++ b/templates/list.html
@@ -23,10 +23,10 @@
             {% for line in data: %}
             <tr>
                 <td >{{ line['id'] }}</td>
-                <td ><a href="question/{{ line['ID'] }}">{{ line['submission_time'] }}</a></td>
+                <td >{{ line['submission_time'] }}</td>
                 <td >{{ line['view_number'] }}</td>
                 <td >{{ line['vote_number'] }}</td>
-                <td >{{ line['title']}}</td>
+                <td ><a href="question/{{ line['ID'] }}">{{ line['title']}}</a></td>
                 <td >{{ line['message'] }}</td>
                 <td >{{ line['image']}}</td>
             </tr>
