/list: list of questions with link

--- a/templates/list.html
+++ b/templates/list.html
@@ -6,33 +6,12 @@
 </head>
 <body>
     <h1>Ask Mate</h1>
-    <a href="/question">Add new Question</a>
-    <table>
-        <thead>
-            <tr>
-                <th>id</th>
-                <th>Submission Time</th>
-                <th>View number</th>
-                <th>Vote number</th>
-                <th>Title</th>
-                <th>Message</th>
-                <th>Image</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for line in data: %}
-            <tr>
-                <td >{{ line['id'] }}</td>
-                <td >{{ line['submission_time'] }}</td>
-                <td >{{ line['view_number'] }}</td>
-                <td >{{ line['vote_number'] }}</td>
-                <td ><a href="question/{{ line['ID'] }}">{{ line['title']}}</a></td>
-                <td >{{ line['message'] }}</td>
-                <td >{{ line['image']}}</td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+    <a href="/add-question">Add new Question</a>
+    <ul>
+        {% for line in data: %}
+        <li><a href="/question/<id>">{{ line['title'] }}</a></li>
+        {% endfor %}
+    </ul>
 </body>
 </html>
 
