--- a/templates/list.html
+++ b/templates/list.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Ask Mate</title>
+    <link rel="stylesheet" href="static/style.css">
 </head>
 <body>
     <h1>Ask Mate</h1>
