--- a/templates/question.html
+++ b/templates/question.html
@@ -34,6 +34,6 @@
             {% endif %}
         {% endfor %}
     </ul>
-
+    <a href="/question/{{story['id']}}/new-answer">Add a new answer</a>
 </body>
 </html>
