--- a/templates/add_question.html
+++ b/templates/add_question.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Ask a question | AskMate</title>
+    <link rel="stylesheet" href="static/style.css">
+
 </head>
 <body>
     <h1>Ask a question</h1>
