--- a/templates/question.html
+++ b/templates/question.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Question Display</title>
+    <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
     <h2>{{ story['title'] }}</h2>
