--- a/static/style.css
+++ b/static/style.css
@@ -1,14 +1,15 @@
 h1 {
     color: darkslategray;
-    padding-left: 20px;
-    font-family: 'Chilanka', cursive;
+    padding-right: 140px;
+    padding-top: 100px;
+    font-family: 'Courier New', cursive;
     font-size: 60px;
-    text-align: center;
+    text-align: right;
 }
 
 h2{
     color: darkslategray;
-    font-family: 'Chilanka', cursive;
+    font-family: 'Courier New', cursive;
     padding-left: 20px;
     padding-top: 30px;
     text-decoration: underline;
@@ -21,10 +22,10 @@ a{
 }
 
 body {
-    background-image: url("/static/pexels-photo-316466.jpeg");
-    background-position: right;
+    background-image: url("/static/apple-background-connection-399161.jpg");
+    background-position: top;
     background-repeat: no-repeat;
-    background-size: 135%;
+    background-size: 100%;
     padding-left: 20px;
 }
 
@@ -34,4 +35,9 @@ form{
 
 li{
     padding-bottom: 10px;
+}
+
+hr{
+    margin-right: 600px;
+    color: #9291911a;
 }
