--- a/templates/new_answer.html
+++ b/templates/new_answer.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>New Answer</title>
-    <link rel="stylesheet" href="static/style.css">
-
+    <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
     <h2>{{ story['title'] }}</h2>
