--- a/templates/question.html
+++ b/templates/question.html
@@ -18,6 +18,7 @@
             <td>{{ story['submission_time'] }}</td>
             <td>{{ story['view_number'] }}</td>
             <td>{{ story['vote_number'] }}</td>
+            <td>{{ story['image'] }}</td>
         </tbody>
     </table>
     <h3>Message:</h3>
