--- a/templates/add_question.html
+++ b/templates/add_question.html
@@ -11,6 +11,8 @@
     <textarea id="title" name="title" rows="1" cols="80" required></textarea></p>
     <p><label for="message">Question:</label><br>
     <textarea id="message" name="message" rows="8" cols="80" required></textarea></p>
+        <h2>Upload picture</h2>
+        <p><label for="image"> <input type=file name="image"></label></p>
     <p><button type="submit">Ask this question!</button></p>
     </form>
 </body>
