--- a/templates/list.html
+++ b/templates/list.html
@@ -9,8 +9,8 @@
     <h1>Ask Mate</h1>
     <a href="/add-question">Add new Question</a>
     <ul>
-        {% for line in data: %}
-        <li><a href="/question/{{ line['id'] }}">{{ line['title'] }}</a></li>
+        {% for question in data: %}
+        <li><a href="/question/{{ question.id }}">{{ question.title }}</a></li>
         {% endfor %}
     </ul>
 </body>
