--- a/templates/question.html
+++ b/templates/question.html
@@ -6,47 +6,55 @@
     <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
-    <h2>{{ story['title'] }}</h2>
+    <div id="story" ></div>
+    {%  for question in questions %}
+    <h2>{{ question.title }}</h2>
+
     <table>
         <thead>
             <td>ID</td>
             <td>Submission time</td>
             <td>Number of views</td>
             <td>Number of votes</td>
+            <td>Image</td>
         </thead>
         <tbody>
-            <td>{{ story['id'] }}</td>
-            <td>{{ story['submission_time'] }}</td>
-            <td>{{ story['view_number'] }}</td>
-            <td>{{ story['vote_number'] }}</td>
-            <td>{{ story['image'] }}</td>
+            <td>{{ question.id }}</td>
+            <td>{{ question['submission_time'] }}</td>
+            <td>{{ question['view_number'] }}</td>
+            <td>{{ question['vote_number'] }}</td>
+            <td>{{ question['image'] }}</td>
         </tbody>
     </table>
     <h3>Message:</h3>
-    <p>{{ story['message'] }}</p>
-    {% if story['image']: %}
+    <p id="question_massage">{{ question['message'] }}</p>
+    {% if question['image']: %}
         <p>Image:</p>
-        <p>{{ story['image'] }}</p>
+        <p>{{ question['image'] }}</p>
     {% endif %}
-    <button type="submit" name="question-upvote" value="{{ story['id'] }}" formmethod="post"  formaction="/question/<question_id>/vote-up">Upvote</button>
-    <button type="submit" name="question-downvote" value="{{ story['id'] }}" formmethod="post" formaction="/question/<question_id>/vote-down">Downvote</button>
-    <a href= "/question/{{ story['id'] }}/delete" ><input type="button" value=Delete></a>
+    <button type="submit" name="question-upvote" value="{{ question['id'] }}" formmethod="post"  formaction="/question/<question_id>/vote-up">Upvote</button>
+    <button type="submit" name="question-downvote" value="{{ question['id'] }}" formmethod="post" formaction="/question/<question_id>/vote-down">Downvote</button>
+    <a href= "/question/{{ question['id'] }}/delete" ><input type="button" value=Delete></a>
     <hr style="margin-right: 600px;">
     <h3>Answers:</h3>
     <ul>
-        {% for line in story_answer: %}
-            {% if line['question_id'] == story['id'] %}
-                <p>{{ line['message'] }}</p>
-                <p><button type="submit" name="answer-vote-button" value="Upvote" formmethod="post" formaction="/question/<question_id>/vote-up">Upvote</button>
-                    <button type="submit" name="answer-vote-button" value="Downvote" formmethod="post" formaction="/question/<question_id>/vote-down">Downvote</button></p>
-                <p>Vote number: {{ line['vote_number'] }}</p>
-                <hr style="margin-right: 600px">
-            {% endif %}
+        {% for answer in answers: %}
+            <p>{{ answer['message'] }}</p>
+            <p>
+                <button type="submit" name="answer-vote-button" value="Upvote" formmethod="post"
+                        formaction="/question/<question_id>/vote-up">Upvote
+                </button>
+                <button type="submit" name="answer-vote-button" value="Downvote" formmethod="post"
+                        formaction="/question/<question_id>/vote-down">Downvote
+                </button>
+            </p>
+            <p>Vote number: {{ answer['vote_number'] }}</p>
+            <hr style="margin-right: 600px">
         {% endfor %}
     </ul>
-    <h3><a href="/question/{{story['id']}}/new-answer">Add a new answer</a></h3>
+    <h3><a href="/question/{{question['id']}}/new-answer">Add a new answer</a></h3>
 
 
-
+    {% endfor  %}
 </body>
 </html>
