--- a/templates/add_question.html
+++ b/templates/add_question.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h2>Ask a question</h2>
-    <form action='/add-question' method="POST">
+    <form action= {{ url_for('route_save_question') }} method="POST">
     <p><label for="title">Title:</label><br>
     <textarea id="title" name="title" rows="1" cols="80" required></textarea></p>
     <p><label for="message">Question:</label><br>
