--- a/templates/question.html
+++ b/templates/question.html
@@ -6,24 +6,24 @@
     <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
-    <div id="story" ></div>
-    {%  for question in questions %}
+<div id="story"></div>
+{% for question in questions %}
     <h2>{{ question.title }}</h2>
 
     <table>
         <thead>
-            <td>ID</td>
-            <td>Submission time</td>
-            <td>Number of views</td>
-            <td>Number of votes</td>
-            <td>Image</td>
+        <td>ID</td>
+        <td>Submission time</td>
+        <td>Number of views</td>
+        <td>Number of votes</td>
+        <td>Image</td>
         </thead>
         <tbody>
-            <td>{{ question.id }}</td>
-            <td>{{ question['submission_time'] }}</td>
-            <td>{{ question['view_number'] }}</td>
-            <td>{{ question['vote_number'] }}</td>
-            <td>{{ question['image'] }}</td>
+        <td>{{ question.id }}</td>
+        <td>{{ question['submission_time'] }}</td>
+        <td>{{ question['view_number'] }}</td>
+        <td>{{ question['vote_number'] }}</td>
+        <td>{{ question['image'] }}</td>
         </tbody>
     </table>
     <h3>Message:</h3>
@@ -32,13 +32,25 @@
         <p>Image:</p>
         <p>{{ question['image'] }}</p>
     {% endif %}
-    <button type="submit" name="question-upvote" value="{{ question['id'] }}" formmethod="post"  formaction="/question/<question_id>/vote-up">Upvote</button>
-    <button type="submit" name="question-downvote" value="{{ question['id'] }}" formmethod="post" formaction="/question/<question_id>/vote-down">Downvote</button>
-    <a href= "/question/{{ question['id'] }}/delete" ><input type="button" value=Delete></a>
+    <h4>Comments:</h4>
+    <h5>
+    {% for comment in comments %}
+        <p>{{ comment.message }}</p>
+    {% endfor %}
+    </h5>
+    <button type="submit" name="question-upvote" value="{{ question['id'] }}" formmethod="post"
+            formaction="/question/<question_id>/vote-up">Upvote
+    </button>
+    <button type="submit" name="question-downvote" value="{{ question['id'] }}" formmethod="post"
+            formaction="/question/<question_id>/vote-down">Downvote
+    </button>
+    <a href="/question/{{ question['id'] }}/delete"><input type="button" value=Delete></a>
+    <a href="/question/{{ question['id'] }}/new_comment"><input type="button" value="Add comment"></a>
     <hr style="margin-right: 600px;">
     <h3>Answers:</h3>
     <ul>
-        {% for answer in answers: %}
+
+        {% for answer in answers %}
             <p>{{ answer['message'] }}</p>
             <p>
                 <button type="submit" name="answer-vote-button" value="Upvote" formmethod="post"
@@ -47,14 +59,14 @@
                 <button type="submit" name="answer-vote-button" value="Downvote" formmethod="post"
                         formaction="/question/<question_id>/vote-down">Downvote
                 </button>
+            <a href="/question/{{ question['id'] }}/{{ answer['id'] }}/new_comment"><input type="button" value="Add comment"></a>
             </p>
             <p>Vote number: {{ answer['vote_number'] }}</p>
             <hr style="margin-right: 600px">
+
         {% endfor %}
     </ul>
-    <h3><a href="/question/{{question['id']}}/new-answer">Add a new answer</a></h3>
-
-
-    {% endfor  %}
+    <h3><a href="/question/{{ question['id'] }}/new-answer">Add a new answer</a></h3>
+{% endfor %}
 </body>
 </html>
