search - not working jet

--- a/templates/list.html
+++ b/templates/list.html
@@ -8,6 +8,10 @@
 <body>
     <h1>Ask Mate</h1>
     <a href= {{ url_for('route_save_question') }}>Add new Question</a>
+    <form action=/search method="get">
+        <input name="search_phrase">
+        <input type="submit" value="Search">
+    </form>
     <ul>
         {% for question in data: %}
         <li><a href= "/question/{{ question.id }}">{{ question.title }}</a></li>
