--- a/templates/question.html
+++ b/templates/question.html
@@ -69,4 +69,5 @@
     <h3><a href="/question/{{ question['id'] }}/new-answer">Add a new answer</a></h3>
 {% endfor %}
 </body>
+{% include 'footer.html' %}
 </html>
