--- a/templates/search.html
+++ b/templates/search.html
@@ -7,6 +7,7 @@
 
 </head>
 <body>
+<h1>Ask Mate</h1>
     <p> Results in questions:
     {% for result in data %}
         <li><a href= "/question/{{ result.id }}">{{ result.title }}</a></li>
@@ -14,7 +15,7 @@
     </p>
     <p>Results in answers:
     {% for result in answer_data %}
-        <li><a href= "/question/{{ result.id }}">{{ result.message }}</a></li>
+        <li><a href= "/question/{{ result.question_id }}">{{ result.message }}</a></li>
     {% endfor %}
     </p>
 </body>
