not massage, but message :-)

--- a/templates/question.html
+++ b/templates/question.html
@@ -27,7 +27,7 @@
         </tbody>
     </table>
     <h3>Message:</h3>
-    <p id="question_massage">{{ question['message'] }}</p>
+    <p id="question_message">{{ question['message'] }}</p>
     {% if question['image']: %}
         <p>Image:</p>
         <p>{{ question['image'] }}</p>
