--- a/templates/list.html
+++ b/templates/list.html
@@ -7,18 +7,20 @@
 </head>
 <body>
     <h1>Ask Mate</h1>
-    <a href= {{ url_for('route_save_question') }}>Add new Question</a>
-    <form action=/search method="get">
+    <a id='add_question' href= {{ url_for('route_save_question') }}>Add new Question</a>
+    <form id=search_form action=/search method="get">
         <input name="search_phrase">
         <input type="submit" value="Search">
     </form>
-    <ul>
+    <ul id="list_question">
         {% for question in data: %}
             <li>
                 <a href= "/question/{{ question.id }}">{{ question.title }}</a></br>
-                Votes: {{ question.vote_number }}
-                Submission time: {{ question.submission_time }}
-                Views: Submission time: {{ question.view_number }}
+                <table>
+                    <td><img src="static/check.png" alt="Vote" style="width:20px;height:20px;">: {{ question.vote_number }}</td>
+                    <td><img src="static/time.png" alt="Submission time" style="width:20px;height:20px;">: {{ question.submission_time }}</td>
+                    <td><img src="static/view.png" alt="View number" style="width:20px;height:20px;">: {{ question.view_number }}</td>
+                </table>
             </li>
         {% endfor %}
     </ul>
