--- a/templates/new_comment_to_answer.html
+++ b/templates/new_comment_to_answer.html
@@ -6,16 +6,19 @@
     <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
-    {% for answer in answer %}
+    {% for answer in answers %}
+       {% for question in questions %}
     <h2>{{ answer['title'] }}</h2>
     <p>{{ answer['message'] }}</p>
-    <form action= '/question/<question_id>/<answer_id>/new_comment' method="POST">
-        {% endfor %}
+    <form action= '/question/{{question['id']}}/{{answer['id']}}/new_comment' method="POST">
+    {% endfor %}
+    {% endfor %}
         <p>
             <label for="comment">Answer:</label><br>
             <textarea name="comment" rows="5" cols="100" minlength="10" placeholder="Please enter your comment here..." formmethod="post" required></textarea>
         </p>
         <button type="submit">Submit</button>
+
     </form>
 </body>
 </html>
