--- a/templates/question.html
+++ b/templates/question.html
@@ -60,6 +60,7 @@
                         formaction="/question/<question_id>/vote-down">Downvote
                 </button>
             <a href="/question/{{ question['id'] }}/{{ answer['id'] }}/new_comment"><input type="button" value="Add comment"></a>
+            <a href="/answer/{{ answer['id'] }}/edit"><input type="button" value="Edit"></a>
             </p>
             <p>Vote number: {{ answer['vote_number'] }}</p>
             <hr style="margin-right: 600px">
