--- a/templates/search.html
+++ b/templates/search.html
@@ -10,6 +10,7 @@
 <h1>Ask Mate</h1>
     <p> Results in questions:
     {% for result in data %}
+        <span class="highlight">{{ result }}</span>
         <li><a href= "/question/{{ result.id }}">{{ result.title }}</a></li>
     {% endfor %}
     </p>
