--- a/static/style.css
+++ b/static/style.css
@@ -77,3 +77,11 @@ thead{
     position: absolute;
     top: 250px;
 }
+
+#sort{
+    list-style-type:none;
+    position: absolute;
+    top:200px;
+    left:50px
+}
+
