--- a/static/style.css
+++ b/static/style.css
@@ -23,7 +23,7 @@ a{
 
 body {
     background-image: url("/static/apple-background-connection-399161.jpg");
-    background-position: top;
+    background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: 100%;
     padding-left: 20px;
