--- a/templates/search.html
+++ b/templates/search.html
@@ -4,20 +4,23 @@
     <meta charset="UTF-8">
     <title>Search result</title>
     <link rel="stylesheet" href="static/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
+          integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+
 
 </head>
 <body>
 <h1>Ask Mate</h1>
-    <p> Results in questions:
+<p> Results in questions:
     {% for result in data %}
         <span class="highlight">{{ result }}</span>
-        <li><a href= "/question/{{ result.id }}">{{ result.title }}</a></li>
+        <li><a href="/question/{{ result.id }}">{{ result.title }}</a></li>
     {% endfor %}
-    </p>
-    <p>Results in answers:
+</p>
+<p>Results in answers:
     {% for result in answer_data %}
-        <li><a href= "/question/{{ result.question_id }}">{{ result.message }}</a></li>
+        <li><a href="/question/{{ result.question_id }}">{{ result.message }}</a></li>
     {% endfor %}
-    </p>
+</p>
 </body>
 </html>
