--- a/templates/new_comment.html
+++ b/templates/new_comment.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>New Answer</title>
     <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+
 </head>
 <body>
     {% for question in questions %}
