--- a/static/style.css
+++ b/static/style.css
@@ -27,7 +27,6 @@ body {
     background-repeat: no-repeat;
     background-size: 100%;
     padding-left: 20px;
-    .highlight{background-color:#FFFF00}
 }
 
 form{
@@ -86,3 +85,6 @@ thead{
     left:50px
 }
 
+.highlight{
+    background-color:#FFFF00
+}
