--- a/templates/question.html
+++ b/templates/question.html
@@ -11,14 +11,16 @@
 <div id="story"></div>
 {% for question in question %}
     <h2>{{ question.title }}</h2>
-    <button type="submit" name="question-upvote" value="{{ question['id'] }}" formmethod="post"
-            formaction="/question/<question_id>/vote-up">Upvote
+    <button>
+    <i class="fas fa-angle-down" type="submit" name="question-upvote" value="{{ question['id'] }}" formmethod="post"
+       formaction="/question/<question_id>/vote-up"></i>
     </button>
-    <button type="submit" name="question-downvote" value="{{ question['id'] }}" formmethod="post"
-            formaction="/question/<question_id>/vote-down">Downvote
+    <button>
+    <i class="fas fa-angle-up" type="submit" name="question-downvote" value="{{ question['id'] }}" formmethod="post"
+       formaction="/question/<question_id>/vote-down"></i>
     </button>
-    <a href="/question/{{ question['id'] }}/delete"><input type="button" value=Delete></a>
-    <a href="/question/{{ question['id'] }}/new_comment"><input type="button" value="Add comment to question"></a><br>
+    <a href="/question/{{ question['id'] }}/delete"><i class="fas fa-trash-alt" style="color: black"></i></a>
+    <a href="/question/{{ question['id'] }}/new_comment"><i class="far fa-plus-square" style="color: black"></i></a>
     <table>
         <thead>
         <td>ID</td>
@@ -59,21 +61,29 @@
     <ul>
         {% for answer in answers %}
             <p>{{ answer['message'] }}</p>
-            <h5>Comments:</h5>
+            <h5>Comments:
+                <a href="/question/{{ question['id'] }}/{{ answer['id'] }}/new_comment"><i class="far fa-plus-square"
+                                                                                           style="color: black"></i></a>
+            </h5>
             {% for answer_comment in answer_comments %}
                 {% if answer['id'] == answer_comment['answer_id'] %}
                     <h6>
                         <p>{{ answer_comment['message'] }}
                         <p>
-                            <button <i class="fas fa-angle-down" type="submit" name="answer-vote-button" value="Upvote" formmethod="post"
-                                    formaction="/question/<question_id>/vote-up"></i>
+                            <button
+                            <i class="fas fa-angle-down" type="submit" name="answer-vote-button" value="Upvote"
+                               formmethod="post"
+                               formaction="/question/<question_id>/vote-up"></i>
                             </button>
-                            <button> <i class="fas fa-angle-up" type="submit" name="answer-vote-button" value="Downvote" formmethod="post"
-                                    formaction="/question/<question_id>/vote-down"></i>
+                            <button><i class="fas fa-angle-up" type="submit" name="answer-vote-button" value="Downvote"
+                                       formmethod="post"
+                                       formaction="/question/<question_id>/vote-down"></i>
                             </button>
-                            <a href="/question/{{ question['id'] }}/{{ answer['id'] }}/new_comment"><i class="far fa-plus-square" style="color: black"></i></a>
-                            <a href="/answer/{{ answer['id'] }}/edit"><i class="far fa-edit" style="color: black"></i></a>
-                            <a href="/answer/{{ answer['id'] }}/delete"><i class="fas fa-trash-alt" style="color: black"></i></a>
+
+                            <a href="/answer/{{ answer['id'] }}/edit"><i class="far fa-edit"
+                                                                         style="color: black"></i></a>
+                            <a href="/answer/{{ answer['id'] }}/delete"><i class="fas fa-trash-alt"
+                                                                           style="color: black"></i></a>
                         </p>
                         </p>
                     </h6>
