question_vote_better

--- a/templates/list.html
+++ b/templates/list.html
@@ -29,7 +29,7 @@
         {% for question in data: %}
             <li>
                 <a href= "/question/{{ question.id }}">{{ question.title }}</a></br>
-                <table>
+                <table id="question_data">
                     <td><img src="static/check.png" alt="Vote" style="width:20px;height:20px;">: {{ question.vote_number }}</td>
                     <td><img src="static/time.png" alt="Submission time" style="width:20px;height:20px;">: {{ question.submission_time }}</td>
                     <td><img src="static/view.png" alt="View number" style="width:20px;height:20px;">: {{ question.view_number }}</td>
