delete comment from answer

--- a/templates/new_comment_to_answer.html
+++ b/templates/new_comment_to_answer.html
@@ -16,7 +16,7 @@
     {% endfor %}
     {% endfor %}
         <p>
-            <label for="comment">Answer:</label><br>
+            <label for="comment">Please type in your comment:</label><br>
             <textarea name="comment" rows="5" cols="100" minlength="10" placeholder="Please enter your comment here..." formmethod="post" required></textarea>
         </p>
         <button type="submit">Submit</button>
